# itis-fp-8xx-fall-2021

./: .gitignore  HW1_Соловьев-11-808.hs  README.md
cw/: cw.cabal
cw/app/: Main.hs
du/: README.md  du.cabal
du/app/: Du.hs  Hw1.hs  Main.hs
du/testfolder/withfle/: smth.txt
hw5/: proj4.cabal
hw5/app/: Main.hs
proj1/: proj1.cabal
proj1/app/: Hw1.hs  Main.hs
proj2/: proj2.cabal
proj2/app/: Main.hs
proj3/: proj3.cabal
proj3/app/: Main.hs
proj3_hw/: proj3.cabal
proj3_hw/app/: Main.hs
proj4/: proj4.cabal
proj4/app/: Main.hs  TheLens.hs
proj5/: CHANGELOG.md  proj5.cabal
proj5/app/: Main.hs
