cabal-version:      2.4
name:               proj4
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Aidar Shaidullin
maintainer:         ajdarshajdullin@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable proj4
    main-is:          Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12.0.0
                    , streaming >=0.2
                    , lens >= 5
		    , split >= 0.2.3.3
		    , streaming-bytestring >= 0.2.1
		    , resourcet >= 1.2.4.3
		    , streaming-attoparsec >= 1.0.0.1
		    , attoparsec >= 0.13.2.2
		    , bytestring >= 0.10.8.2
		    , foldl >= 1.4.10
    hs-source-dirs:   app
    default-language: Haskell2010
